src/app/app_render_tests/snapshots/jiq__app__app_render_tests__result_state_tests__snapshot_results_empty_focused.snap
---
source: src/app/app_render_tests/result_state_tests.rs
assertion_line: 51
expression: output
---
"╭   ∅ No Results   Array [2 objects] | Showing last non-empty result ───────────────────────────────────── L1-8/8 (0%) ╮"
"▌[                                                                                                                     │"
"│  {                                                                                                                   │"
"│    "name": "svc1"                                                                                                    │"
"│  },                                                                                                                  │"
"│  {                                                                                                                   │"
"│    "name": "svc2"                                                                                                    │"
"│  }                                                                                                                   │"
"│]                                                                                                                     │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"╰───────────── Ctrl+T Edit Query • i Edit Query • > value • * iterate • ^ parent • } wrap • ]/[ siblings ──────────────╯"
"╭ Query [INSERT] ───────────────────────────────────────────────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│.[] | select(.name == "nonexistent")                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" F1/? Help • Ctrl+T Edit Query • Ctrl+S Snippets • Ctrl+F Search • Ctrl+W Save • Ctrl+C Quit                            "
