src/app/app_render_tests/snapshots/jiq__app__app_render_tests__result_state_tests__snapshot_results_empty_unfocused.snap
---
source: src/app/app_render_tests/result_state_tests.rs
expression: output
---
"╭   ∅ No Results   Array [2 objects] | Showing last non-empty result ──────────────────────────────────────────────────╮"
"│[                                                                                                                     │"
"│  {                                                                                                                   │"
"│    "name": "svc1"                                                                                                    │"
"│  },                                                                                                                  │"
"│  {                                                                                                                   │"
"│    "name": "svc2"                                                                                                    │"
"│  }                                                                                                                   │"
"│]                                                                                                                     │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"╰───────────────────────────────────────────────────────────────────────────────────────────────────────── L1-8/8 (0%) ╯"
"╭ Query [INSERT] ───────────────────────────────────────────────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│.[] | select(.name == "nonexistent")                                                                                  │"
"╰─────────────────────── Shift+Tab Navigate Results • Enter Output Result • Ctrl+Q Output Query ───────────────────────╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+O Copy Result • Ctrl+W Save • Ctrl+Q Output Quer"
