src/app/app_render_tests/snapshots/jiq__app__app_render_tests__result_state_tests__snapshot_results_error_unfocused.snap
---
source: src/app/app_render_tests/result_state_tests.rs
assertion_line: 98
expression: output
---
"╭   ⚠ Syntax Error   Object | Showing last successful result ───────────────────────────────────────────── L1-3/3 (0%) ╮"
"│{                                                                                                                     │"
"│  "test": true                                                                                                        │"
"│}                                                                                                                     │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭ Query [INSERT] ───────────────────────────────────────────────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│.invalid syntax here                                                                                                  │"
"╰─────────────────────────────────── Shift+Tab Navigate Results • Ctrl+E Show Error ───────────────────────────────────╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+Q Output Query • Ctrl+C Quit                    "
