src/app/app_render_tests/snapshots/jiq__app__app_render_tests__result_state_tests__snapshot_results_success_focused.snap
---
source: src/app/app_render_tests/result_state_tests.rs
assertion_line: 19
expression: output
---
"╭ Stream [3]  · . ──────────────────────────────────────────────────────────────────────────────────────── L1-3/3 (0%) ╮"
"▌"svc1"                                                                                                                │"
"│"svc2"                                                                                                                │"
"│"svc3"                                                                                                                │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"╰───────────── Ctrl+T Edit Query • i Edit Query • > value • * iterate • ^ parent • } wrap • ]/[ siblings ──────────────╯"
"╭ Query [INSERT] ───────────────────────────────────────────────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│.[].name                                                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" F1/? Help • Ctrl+T Edit Query • Ctrl+S Snippets • Ctrl+F Search • Ctrl+W Save • Ctrl+C Quit                            "
